--- a/Fundraising/wwwroot/CMS/member.html
+++ b/Fundraising/wwwroot/CMS/member.html
@@ -58,21 +58,19 @@
                                     </div>
                                     <div class="row justify-content-center p-3">
                                         <div class="mb-3 col-12">
-                                            <form action="" class="py-4"
-                                                style=" position: relative; border: 1px solid #e3e6f0;">
-                                                <div class="row " style="line-height: 32px;">
-                                                    <p class="bg-white"
-                                                        style="position: absolute; top: -15px; left: 2%; font-size: 24px;">
-                                                        查詢條件</p>
-                                                    <div class="">
-                                                        <label class="px-3" for="">會員編號:</label>
-                                                        <input type="text" v-model="input.userId">
-                                                    </div>
-                                                    <div class="">
-                                                        <label class="px-3" for="">會員名稱:</label>
-                                                        <input type="text" v-model="input.userName">
-                                                    </div>
-                                                </div>
+                                            <form>
+                                                <fieldset>
+                                                    <legend>查詢條件</legend>
+                                                    <div class="d-flex py-3">
+                                                        <div class="">
+                                                            <label class="px-3" for="">會員編號:</label>
+                                                            <input type="text" v-model="input.userId">
+                                                        </div>
+                                                        <div class="">
+                                                            <label class="px-3" for="">會員名稱:</label>
+                                                            <input type="text" v-model="input.userName">
+                                                        </div>
+                                                </fieldset>
                                             </form>
                                         </div>
                                         <div class="py-0 col-12 mb-5">
@@ -82,7 +80,7 @@
                                                     <tr>
                                                         <th class="col-1">編號</th>
                                                         <th class="col-2">會員姓名</th>
-                                                        <th class="col-2">Email</th>
+                                                        <th class="col-3">Email</th>
                                                         <th class="col-2">電話</th>
                                                         <th class="col-2">加入時間</th>
                                                         <th >操作</th>
