--- a/Fundraising/wwwroot/CMS/Orefund.html
+++ b/Fundraising/wwwroot/CMS/Orefund.html
@@ -58,22 +58,19 @@
                                     </div>
                                     <div class="row justify-content-center p-3">
                                         <div class="mb-3 col-12">
-                                            <form action="" class="py-4"
-                                                style=" position: relative; border: 1px solid #e3e6f0;">
-                                                <div class="row " style="line-height: 32px;">
-                                                    <p class="bg-white"
-                                                        style="position: absolute; top: -15px; left: 2%; font-size: 24px;">
-                                                        查詢條件
-                                                    </p>
-                                                    <div class="">
-                                                        <label class="px-3" for="">編號:</label>
-                                                        <input type="text" v-model="input.orderId">
-                                                    </div>
-                                                    <div class="">
-                                                        <label class="px-3" for="">提案名稱:</label>
-                                                        <input type="text" v-model="input.productTitle">
-                                                    </div>
-                                                </div>
+                                            <form>
+                                                <fieldset>
+                                                    <legend>查詢條件</legend>
+                                                    <div class="d-flex py-3">
+                                                        <div class="">
+                                                            <label class="px-3" for="">編號:</label>
+                                                            <input type="text" v-model="input.orderId">
+                                                        </div>
+                                                        <div class="">
+                                                            <label class="px-3" for="">提案名稱:</label>
+                                                            <input type="text" v-model="input.productTitle">
+                                                        </div>
+                                                </fieldset>
                                             </form>
                                         </div>
                                         <div class="col-12" id="myTabContent">
@@ -180,9 +177,9 @@
                     "currentAmount": 2190
                 }],
                 employeeinfo: [],
-                input:{
-                    orderId:"",
-                    productTitle:""
+                input: {
+                    orderId: "",
+                    productTitle: ""
                 }
             },
             components: {
@@ -204,22 +201,22 @@
                     sessionStorage.setItem('orderId', index)
                 }
             },
-            computed:{
-                orderIdChange(){
-                    if(this.input.orderId){
-                        return this.orderlist.filter(item =>{
+            computed: {
+                orderIdChange() {
+                    if (this.input.orderId) {
+                        return this.orderlist.filter(item => {
                             return item.orderId.indexOf(this.input.orderId) !== -1
                         })
-                    }else{
+                    } else {
                         return this.orderlist
                     }
                 },
-                productTitleChange(){
-                    if(this.input.productTitle){
-                        return this.orderIdChange.filter(item =>{
+                productTitleChange() {
+                    if (this.input.productTitle) {
+                        return this.orderIdChange.filter(item => {
                             return item.productTitle.toLowerCase().indexOf(this.input.productTitle.toLowerCase()) !== -1
                         })
-                    }else{
+                    } else {
                         return this.orderIdChange
                     }
                 }
