--- a/Fundraising/wwwroot/CMS/PdetailsEdit.html
+++ b/Fundraising/wwwroot/CMS/PdetailsEdit.html
@@ -51,8 +51,8 @@
                                 <div class="card-header py-3 mb-3">
                                     <h3 class="m-0">提案名稱:{{productinfo.productTitle}}</h3>
                                 </div>
-                                <div class="row justify-content-center p-4">
-                                    <div class="col-6 py-3">
+                                <div class="row justify-content-center px-5">
+                                    <div class="col-6">
                                         <img :src="productinfo.coverphoto" alt="" class="w-100 h-100">
                                     </div>
                                     <div class="col-6">
