--- a/Fundraising/wwwroot/CMS/Preview.html
+++ b/Fundraising/wwwroot/CMS/Preview.html
@@ -58,30 +58,29 @@
                                     </div>
                                     <div class="row justify-content-center p-3">
                                         <div class="mb-3  col-12">
-                                            <form action="" class="py-4"
-                                                style=" position: relative; border: 1px solid #e3e6f0;">
-                                                <div class="row " style="line-height: 32px;">
-                                                    <p class="bg-white"
-                                                        style="position: absolute; top: -15px; left: 2%; font-size: 24px;">
-                                                        查詢條件</p>
-                                                    <div class="">
-                                                        <label class="px-3" for="">提案負責人:</label>
-                                                        <input type="text" v-model="input.principalName">
+                                            <form>
+                                                <fieldset>
+                                                    <legend>查詢條件</legend>
+                                                    <div class="d-flex py-3">
+                                                        <div class="">
+                                                            <label class="px-3" for="">提案負責人:</label>
+                                                            <input type="text" v-model="input.principalName">
+                                                        </div>
+                                                        <div class="">
+                                                            <label class="px-3" for="">提案名稱:</label>
+                                                            <input type="text" v-model="input.title">
+                                                        </div>
                                                     </div>
-                                                    <div class="">
-                                                        <label class="px-3" for="">提案名稱:</label>
-                                                        <input type="text" v-model="input.title">
-                                                    </div>
-                                                </div>
+                                                </fieldset>
                                             </form>
                                         </div>
                                         <div class=" col-12">
+                                            <div v-cloak>查詢結果:共{{titleChange.length}}項</div>
                                             <div class="table-responsive">
                                                 <table class="table table-bordered table-hover" id="dataTable"
                                                     width="100%" cellspacing="0">
                                                     <thead>
                                                         <tr>
-                                                            <th class="col-1">序列</th>
                                                             <th class="col-1">負責人</th>
                                                             <th>提案圖片</th>
                                                             <th>提案名稱</th>
@@ -91,13 +90,14 @@
                                                     </thead>
                                                     <tbody>
                                                         <tr v-for="(item,index) in titleChange">
-                                                            <td v-cloak>{{index+1}}</td>
                                                             <td v-cloak>{{item.p.principalName}}</td>
-                                                            <td v-cloak class="col-1 p-1"> <img v-bind:src="item.p.coverphoto"
-                                                                    class="" alt="" style="width:100%"></td>
+                                                            <td v-cloak class="col-1 p-1"> <img
+                                                                    v-bind:src="item.p.coverphoto" class="" alt=""
+                                                                    style="width:100%"></td>
                                                             <td v-cloak>{{item.p.productTitle}}</td>
                                                             <td v-cloak>{{item.p.productStateId}}</td>
-                                                            <td v-cloak><a href="./PdetailsEdit.html" class="btn btn-outline-success"
+                                                            <td v-cloak><a href="./PdetailsEdit.html"
+                                                                    class="btn btn-outline-success"
                                                                     v-on:click="checkmenber(item.p.productId)">審核</a>
                                                             </td>
                                                         </tr>
