--- a/Fundraising/wwwroot/CMS/index.html
+++ b/Fundraising/wwwroot/CMS/index.html
@@ -52,7 +52,7 @@
                     <div class="col-10">
                         <div class="px-3">
                             <!-- 內容標頭-->
-                            <div class="d-sm-flex align-items-center justify-content-between mb-4">
+                            <div class="d-sm-flex align-items-center justify-content-between mb-3">
                                 <h1 class="h2 mb-0 text-gray-800 font-weight-bold">後台總覽</h1>
                             </div>
 
@@ -137,7 +137,7 @@
                             <div class="row">
 
                                 <!-- 圖表內容 -->
-                                <div class="col-8 p-0" style="overflow-y: auto;">
+                                <div class="col-8 px-2" style="overflow-y: auto;">
                                     <div class="card shadow mb-4">
 
                                         <div
