--- a/Fundraising/wwwroot/CMS/message.html
+++ b/Fundraising/wwwroot/CMS/message.html
@@ -59,20 +59,18 @@
                                     </div>
                                     <div class="row justify-content-center p-3">
                                         <div class="mb-3  col-12">
-                                            <form action="" class="py-4"
-                                                style=" position: relative; border: 1px solid #e3e6f0;">
-                                                <div class="row m-0 px-2">
-                                                    <p class="bg-white"
-                                                        style="position: absolute; top: -15px; left: 2%; font-size: 24px;">
-                                                        查詢條件</p>
-                                                    <div style="font-size: 24px;">
-                                                        選擇題案名稱:</div>
-                                                    <select name="" id="productselect" v-on:change="changegetcomment">
-                                                        <option v-cloak
-                                                            v-for="item in productlist.filter(x=>x.productStateId == 3)"
-                                                            :value="item.productId">{{item.productTitle}}</option>
-                                                    </select>
-                                                </div>
+                                            <form>
+                                                <fieldset>
+                                                    <legend>查詢條件</legend>
+                                                    <div class="d-flex py-3">
+                                                        <div class="pr-3" style="font-size: 24px;">
+                                                            選擇題案名稱:</div>
+                                                        <select name="" id="productselect" v-on:change="changegetcomment">
+                                                            <option v-cloak
+                                                                v-for="item in productlist.filter(x=>x.productStateId == 3)"
+                                                                :value="item.productId">{{item.productTitle}}</option>
+                                                        </select>
+                                                </fieldset>
                                             </form>
                                         </div>
                                         <div class=" col-10">
