--- a/Fundraising/wwwroot/ProductPage/comments.html
+++ b/Fundraising/wwwroot/ProductPage/comments.html
@@ -140,7 +140,7 @@
                 <!-- 這則留言 -->
                 <hr>
                 <div class="d-flex bd-highlight mb-3" style="display:none;">
-                    <img style="height: 30px; width: 30px;" :src="item.userphoto" alt="">
+                    <img style="height: 30px; width: 30px; border-radius: 15px; object-fit: cover;" :src="item.userphoto" alt="">
                     <div class="p-2 bd-highlight"><a href="#" style="text-decoration: none;">{{item.username}}</a></div>
                     <div class="p-1 bd-highlight" style="border: solid #8CEA00; color: #548C00; height: 35px; ">留言人</div>
                     <div class="ms-auto p-2 bd-highlight">
